# binary-expression-evaluator

./: .README.org.swp  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.org  makefile  scratch.txt
include/: binary_expression_tree.h  cli.h  lexer.h  main.h  postfix.h
source/: .lexer.c.swp  .postfix.c.swp  binary_expression_tree.c  cli.c  lexer.c  main.c  postfix.c
